    determine the idle timeout for a host.
  * Added NO_PROXY support.  Pull Request #31 by Laurence Rowe.
  * Added #cert and #key aliases for Net::HTTP compatibility.  Pull request
    #26 by dlee.
  * The artifice gem now disables SSL session reuse to prevent breakage of
    testing frameworks.  Pull Request #29 by Christopher Cooke.
* Bug fixes
  * Socket options are set again following connection reset.  Pull request #28
    by cmaion.
  * #shutdown now works even if no connections were made.  Pull Request #24 by
    James Tucker.

=== 2.7 / 2012-06-06

* Minor enhancement
  * Added JRuby compatibility by default for HTTPS connections.  (JRuby lacks
    OpenSSL::SSL::Session.)

=== 2.6 / 2012-03-26

* Minor enhancement
  * Net::HTTP::Persistent#idle_timeout may be set to nil to disable expiration
    of connections.  Pull Request #21 by Aaron Stone

=== 2.5.2 / 2012-02-13

* Bug fix
  * Fix variable shadowing warning.

=== 2.5.1 / 2012-02-10

* Bug fix
  * Reusing SSL connections with HTTP proxies now works.  Issue #15 by Paul
    Ingham and mcrmfc

=== 2.5 / 2012-02-07

* Minor enhancements
  * The proxy may be changed at any time.
  * The allowed SSL version may now be set via #ssl_version.
    Issue #16 by astera
  * Added Net::HTTP::Persistent#override_headers which allows overriding
  * Net::HTTP default headers like User-Agent.  See
    Net::HTTP::Persistent@Headers for details.  Issue #17 by andkerosine

* Bug fixes
  * The ruby 1.8 speed monkeypatch now handles EAGAIN for windows users.
    Issue #12 by Alwyn Schoeman
  * Fixed POST example in README.  Submitted by injekt.
  * Fixed various bugs in the shutdown of connections especially cross-thread
    (which you shouldn't be doing anyways).

=== 2.4.1 / 2012-02-03

* Bug fixes
  * When FakeWeb or WebMock are loaded SSL sessions will not be reused to
    prevent breakage of testing frameworks.  Issue #13 by Matt Brictson, pull
    request #14 by Zachary Scott