@@ -642,8 +642,11 @@ class Net::HTTP::Persistent
   end
 
   def http_class # :nodoc:
-    if [:Artifice, :FakeWeb, :WebMock].any? { |klass| Object.const_defined?(klass) } or
-      not @reuse_ssl_sessions then
+    if RUBY_VERSION > '2.0' then
+      Net::HTTP
+    elsif [:Artifice, :FakeWeb, :WebMock].any? { |klass|
+             Object.const_defined?(klass)
+          } or not @reuse_ssl_sessions then
         Net::HTTP
     else
       Net::HTTP::Persistent::SSLReuse
